--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //Firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
 }
